--- a/cor_fundo_div.html
+++ b/cor_fundo_div.html
@@ -1,11 +1,31 @@
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
   .red-text {
     color: red;
   }
 
+  h2 {
+    font-family: Lobster, monospace;
+  }
+
   p {
     font-size: 16px;
     font-family: monospace;
+  }
+
+  .thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 50%;
+  }
+
+  .smaller-image {
+    width: 100px;
+  }
+
+  .silver-background {
+    background-color: silver;
   }
 </style>
 
@@ -13,9 +33,9 @@
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img class="smaller-image thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
 
-  <div>
+  <div class="silver-background">
     <p>Things cats love:</p>
     <ul>
       <li>cat nip</li>
@@ -40,13 +60,13 @@
     <button type="submit">Submit</button>
   </form>
 </main>
+<!-- Você pode definir a cor de fundo de um elemento com a background-colorpropriedade.
 
-<!--definir qual tipografia um elemento deve usar utilizando a propriedade font-family.
+Por exemplo, se você quiser que a cor de fundo de um elemento seja green, você deve colocá-la dentro de seu styleelemento:
 
-Por exemplo, se você quiser definir a tipografia do elemento h2 como sans-serif, deverá usar o seguinte CSS:
-
-h2 {
-  font-family: sans-serif;
+.green-background {
+  background-color: green;
 }
+Crie uma classe chamada silver-backgroundcom background-colorde silver. Atribua esta classe ao seu divelemento.
 
 -->
