--- a/import_tipografia.html
+++ b/import_tipografia.html
@@ -1,6 +1,17 @@
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+
 <style>
   .red-text {
     color: red;
+  }
+
+  h2 {
+    font-family: Lobster;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
   }
 </style>
 
@@ -37,5 +48,6 @@
 </main>
 
 
-<!-- As classes permitem que você use os mesmos estilos CSS em diferentes elementos HTML. 
-    Você pode ver isso aplicando a classe red-text ao primeiro elemento p.-->
+<!--Para importar uma tipografia, você pode copiar a URL da tipografia a partir da biblioteca do Google Fonts e colá-la em seu HTML. Para esse desafio, vamos importar a tipografia Lobster. Para fazer isso, copie o seguinte fragmento de código e cole-o no começo de seu editor de código-fonte (antes da tag de abertura do elemento style):
+
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">-->
